--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,11 @@ jobs:
         python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: true
+        fetch-depth: 0
+    - name: Pull container images
+      run: docker pull hdlc/ghdl:yosys
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
