symbiflow.py: added support for implementation
* ice40 and ecp5, based on NextPNR.
* Constraints support is WIP.

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,7 @@ test: all syn imp bit
 # Synthesis test cases
 #
 
-syn: vhdl-simple vhdl-complex vlog-simple vlog-complex ice40 ecp5
+syn: vhdl-simple vhdl-complex vlog-simple vlog-complex syn-ice40 syn-ecp5
 
 vhdl-simple:
 	symbiflow syn --oci-engine docker \
@@ -34,25 +34,30 @@ vlog-complex:
 			$(VLOGDIR)/top.v \
 		--top Top -o build-$@ $@
 
-ice40:
+syn-ice40:
 	symbiflow syn --oci-engine docker \
 		--vlog $(VLOGDIR)/blink.v \
 		--part hx4k-tq144 \
-		--top Blink -o build-$@ $@
+		--top Blink -o build-ice40 ice40
 
-ecp5:
+syn-ecp5:
 	symbiflow syn --oci-engine docker \
 		--vlog $(VLOGDIR)/blink.v \
 		--part um5g-85k-CABGA381 \
-		--top Blink -o build-$@ $@
+		--top Blink -o build-ecp5 ecp5
 
 #
 # Implementation test cases
 #
 
-imp:
-	symbiflow $@ project-$@
-	
+imp: imp-ice40 imp-ecp5
+
+imp-ice40:
+	symbiflow imp --oci-engine docker --part hx4k-tq144 -o build-ice40 ice40
+
+imp-ecp5:
+	symbiflow imp --oci-engine docker --part 25k-CSFBGA285 -o build-ecp5 ecp5
+
 #
 # Bitstream generation test cases
 #
