--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,7 @@ jobs:
       run: |
         pip install pytest
         pip install .
+    - name: Run test
+      run: pytest
     - name: Run examples
       run: make -C examples
