cli.py: fixed project name specification

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -22,7 +22,7 @@ all-ice40:
 	symbiflow all --oci-engine docker --part $(ICE40) \
 		--vlog $(VLOGDIR)/blink.v \
 		--icf $(CONSDIR)/clk.pcf $(CONSDIR)/led.pcf \
-		--top Blink -o build-ice40 ice40
+		--top Blink -o build-ice40 --project ice40
 
 #
 # Synthesis examples
@@ -33,7 +33,7 @@ syn: vhdl-simple vhdl-complex vlog-simple vlog-complex syn-ice40 syn-ecp5
 vhdl-simple:
 	symbiflow syn --oci-engine $(ENGINE) \
 		--vhdl $(VHDLDIR)/blink.vhdl \
-		--top Blink -o build-$@ $@
+		--top Blink -o build-$@ --project $@
 
 vhdl-complex:
 	symbiflow syn --oci-engine $(ENGINE) \
@@ -41,29 +41,29 @@ vhdl-complex:
 			$(VHDLDIR)/blink.vhdl,blink_lib \
 			$(VHDLDIR)/blink_pkg.vhdl,blink_lib \
 			$(VHDLDIR)/top.vhdl \
-		--top Top -o build-$@ $@
+		--top Top -o build-$@ --project $@
 
 vlog-simple:
 	symbiflow syn --oci-engine $(ENGINE) \
 		--vlog $(VLOGDIR)/blink.v \
-		--top Blink -o build-$@ $@
+		--top Blink -o build-$@ --project $@
 
 vlog-complex:
 	symbiflow syn --oci-engine $(ENGINE) \
 		--vlog \
 			$(VLOGDIR)/blink.v \
 			$(VLOGDIR)/top.v \
-		--top Top -o build-$@ $@
+		--top Top -o build-$@ --project $@
 
 syn-ice40:
 	symbiflow syn --oci-engine $(ENGINE) --part $(ICE40) \
 		--vlog $(VLOGDIR)/blink.v \
-		--top Blink -o build-ice40 ice40
+		--top Blink -o build-ice40 --project ice40
 
 syn-ecp5:
 	symbiflow syn --oci-engine $(ENGINE) --part $(ECP5) \
 		--vlog $(VLOGDIR)/blink.v \
-		--top Blink -o build-ecp5 ecp5
+		--top Blink -o build-ecp5 --project ecp5
 
 #
 # Implementation examples
@@ -74,11 +74,11 @@ imp: imp-ice40 imp-ecp5
 imp-ice40:
 	symbiflow imp --oci-engine $(ENGINE) --part $(ICE40) \
 		--icf $(CONSDIR)/clk.pcf $(CONSDIR)/led.pcf \
-		-o build-ice40 ice40
+		-o build-ice40 --project ice40
 
 imp-ecp5:
 	symbiflow imp --oci-engine $(ENGINE) --part $(ECP5) \
-	-o build-ecp5 ecp5
+	-o build-ecp5 --project ecp5
 
 #
 # Bitstream generation examples
@@ -87,20 +87,20 @@ imp-ecp5:
 bit: bit-ice40 bit-ecp5
 
 bit-ice40:
-	symbiflow bit --oci-engine $(ENGINE) --part $(ICE40) -o build-ice40 ice40
+	symbiflow bit --oci-engine $(ENGINE) --part $(ICE40) -o build-ice40 --project ice40
 
 bit-ecp5:
-	symbiflow bit --oci-engine $(ENGINE) --part $(ECP5) -o build-ecp5 ecp5
+	symbiflow bit --oci-engine $(ENGINE) --part $(ECP5) -o build-ecp5 --project ecp5
 
 #
 # Programation examples
 #
 
 pgm-ice40:
-	symbiflow pgm --oci-engine docker --part $(ICE40) -o build-ice40 ice40
+	symbiflow pgm --oci-engine docker --part $(ICE40) -o build-ice40 --project ice40
 
 pgm-ecp5:
-	symbiflow pgm --oci-engine docker --part $(ECP5) -o build-ecp5 ecp5
+	symbiflow pgm --oci-engine docker --part $(ECP5) -o build-ecp5 --project ecp5
 
 #
 # Clean
