symbiflow.py: modified to use the OCI class
Renamed ghdl-a to ghdl-analysis and removed oci (templates).

--- a/symbiflow/oci.yml
+++ b/symbiflow/oci.yml
@@ -24,7 +24,7 @@ tools:
     container: hdlc/icestorm
   iceprog:
     name:      iceprog
-    container: hdlc/icestorm
+    container: hdlc/prog
     options:   "--device /dev/bus/usb"
   ecppack:
     name:      ecppack
