--- a/docs/Makefile
+++ b/docs/Makefile
@@ -8,7 +8,7 @@ BUILDDIR      = _build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile snippets
+.PHONY: help Makefile snippets devices
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
@@ -22,6 +22,9 @@ snippets:
 		symbiflow $$cmd -h > help-$$cmd.txt ; \
 	done
 	@echo "$@ generated"
+
+devices:
+	python3 devices.py
 
 clean:
 	rm -rf $(BUILDDIR) *.txt
